engine-net-2/examples/Errors/FilterLambdaExpressionError.grs
new graph "Rules.grg"

eval [?t\assign<n>{el:int -> 42}]

quit
